# victor

./: .buckconfig  .buckconfig.override  .gitattributes  .gitignore  .gitmodules  .subtrees  BUCK  CHANGELOG.md  CMakeLists.txt  CameraCapture.m  DEPS  Dockerfile  Doxyfile  DrawTree.m  GetProbeList.m  Jenkinsfile  README  README-engine.md  README.md  TestTree.m  TrainProbes.m  Vagrantfile  Vagrantfile.dev  anki.cmake  astylerc  bundleAdjustment.m  c-source.sh  cgrep.sh  client_mac.go  column.m  computeBlockPose.m  configure-DEPRECATED.py  configure.py  configure_engine.py  decodeBlockMarker.m  decodeIDs.m  detectAndDisplay.m  drawFiducialPlusProbes.m  dropfree.raw  encodeIDs.m  (+56 more)
androidHAL/: BUILD.in  CMakeLists.txt  androidHAL.h  androidHAL_android.cpp  androidHAL_mac.cpp
animProcess/: BUILD.in  CMakeLists.txt
animProcess/src/: signalEssence
basestation/: CMakeLists.txt  robot.cpp
basestation/config/: animations.json  configuration.json
basestation/src/: CMakeLists.txt  actionContainers.cpp  actionInterface.cpp  actionInterface.h  actionQueue.cpp  actionQueue.h  actionableObject.cpp  actionableObject.h  basestation.cpp  behaviorManager.cpp  behaviorManager.h  bleComms.mm  bleRobotManager.mm  block.cpp  block.h  blockWorld.cpp  bridge.cpp  bridge.h  cannedAnimationContainer.cpp  cannedAnimationContainer.h  compoundActions.cpp  compoundActions.h  cozmoActions.cpp  cozmoActions.h  cozmoEngine.cpp  dockableObject.cpp  dockableObject.h  faceAndApproachPlanner.cpp  flatMat.cpp  flatMat.h  latticePlanner.cpp  markerlessObject.cpp  mat.cpp  mat.h  messageDefMacros.h  messageHandler.cpp  messageHandler.h  messages.cpp  multiClientComms.cpp  multiClientComms.h  (+31 more)
basestation/test/: CMakeLists.txt  cozmoTest.cpp  faceAnimationManagerTests.cpp  faceRecognitionTests.cpp  latticePlannerTest.cpp  minAnglePlannerTest.cpp  proceduralFaceTests.cpp  run_CozmoTests.cpp  run_RobotPoseHistoryTest.cpp  testActionList.cpp  testAnimationGroup.cpp  testBehaviorChooser.cpp  testBehaviorFactory.cpp  testBehaviorHelperSystem.cpp  testBehaviorInterface.cpp  testMoodManager.cpp  (+7 more)
cannedAnimLib/: BUILD.in  CMakeLists.txt  animation.cpp  animation.h  audioKeyFrameTypes.cpp  audioKeyFrameTypes.h  cannedAnimationContainer.cpp  cannedAnimationContainer.h  cannedAnimationLoader.cpp  cannedAnimationLoader.h  cozmo_anim_generated.h  faceAnimation.cpp  faceAnimation.h  faceAnimationManager.cpp  faceAnimationManager.h  keyframe.cpp  keyframe.h  proceduralFace.cpp  proceduralFace.h  proceduralFaceDrawer.cpp  proceduralFaceDrawer.h  scanlineDistorter.cpp  scanlineDistorter.h  track.cpp  track.h
clad/: BUILD.in  CMakeLists.txt  Makefile  ast.py  clad.cmake  clad.py  cozmo_CPP_declarations_emitter.py  cozmo_CPP_switch_emitter.py  emitterutil.py  lexer.py  robot  robotViz.Makefile  test.clad
cloud/: .gitignore  BUILD.in  CMakeLists.txt  build-cloud-linux.sh  build_android.sh  clad_processing.sh  main.go  socket.go  socket_test.go
common/: CMakeLists.txt  anki.cmake
coretech/: BUILD.in  CMakeLists.txt  anki.cmake
dasmgr/: CMakeLists.txt  dasConfig.cpp  dasConfig.h  dasManager.cpp  dasManager.h  vic-dasmgr.cpp
engine/: BUILD.in  BlockDefinitionMacros.h  BlockDefinitions.h  CMakeLists.txt  actionableObject.cpp  actionableObject.h  activeCube.cpp  activeCube.h  activeObject.cpp  activeObject.h  activeObjectHelpers.cpp  activeObjectHelpers.h  adpcm.cpp  ankiEventUtil.h  appToEngineHandler.cpp  appToEngineHandler.h  block.cpp  block.h  bridge.cpp  bridge.h  buildVersion.h  charger.cpp  charger.h  contextWrapper.h  cozmoContext.cpp  cozmoContext.h  cozmoEngine.cpp  cozmoEngine.h  cozmoObservableObject.cpp  cozmoObservableObject.h  cpuStats.cpp  cpuStats.h  customObject.cpp  customObject.h  debugImageList.h  dependencyManagedComponent.h  dependencyManagedEntity.h  drivingAnimationHandler.cpp  drivingAnimationHandler.h  dubbinsPathPlanner.cpp  (+112 more)
neon/: BUILD.in  CMakeLists.txt
neuralnets/: BUILD.in  CMakeLists.txt
noise/: CMakeLists.txt  pcm.c  pcm_min.c
resources/: 3rd  BUILD.in  CMakeLists.txt  asset-build.manifest.in  assets  external  externals  makeMobilenet.sh
robot/: .cproject  .debug.bat  .gitignore  .project  BUILD.in  CMakeLists.txt  Makefile  README.md  build_type.h.in  convert_projx_to_uv4.sh  cozmo-uv4.uvmpw  cozmo.uvmpw  dfu.sh  dist.7z  free_dfu.sh  load.cmd  make.py  prebuild.bash  pull_server_firmware.py  release.sh  robot.sct  robot.uvgui.MikeAnderson  robot.uvgui.Nathan  robot.uvopt  robot.uvoptx  robot.uvproj  robot.uvprojx  robot21.uvopt  robot21.uvoptx  robot21.uvproj  robot21.uvprojx  robot41.uvopt  robot41.uvoptx  robot41.uvproj  robot41.uvprojx  robot_boot.uvopt  robot_boot.uvoptx  robot_boot.uvproj  robot_boot.uvprojx  robot_boot_update.uvoptx  (+12 more)
simulator/: BUILD.in  CMakeLists.txt  README.md  kill_ipcs.sh  supportedWebotsVersions.txt
src/: CMakeLists.txt  UiMessageDefinitionsG2U.clad  UiMessageDefinitionsU2G.clad  array2d.cpp  basicMath.cpp  binomialFilter.cpp  block.cpp  blockWorld.cpp  camera.cpp  computeCharacteristicScale.cpp  cozmo.cpp  cozmoGame.cpp  cozmoGame_U2G_callbacks.cpp  cozmoGame_impl.h  cozmoGame_signal_handlers.cpp  dasAppender.cpp  dasGameLogAppender.h  dasLight.cpp  dasLocalAppender.h  dasLogFileAppender.cpp  dasLogFileAppender.h  downsampleByFactor.cpp  fileUtils.cpp  general.cpp  image.cpp  linearAlgebra.cpp  marker2d.cpp  mat.cpp  math.cpp  matlabInterface.cpp  matrix.cpp  memory.cpp  pose.cpp  radians.cpp  robot.cpp  rotation.cpp  sim_overlayDisplay.cpp  taskExecutor.cpp  traceBoundary.cpp  utilities.cpp  (+1 more)
test/: BUILD.in  CMakeLists.txt  common_Test.cpp  coreTechCommonTests.cpp  cozmo_Test.cpp  math_Test.cpp  testMatrix.cpp  testPoint.cpp  vision_Test.cpp
testCrash/: BUILD.in  CMakeLists.txt
tools/: CMakeLists.txt  auto_grab_recordings.py  ear_puller.py  img565.py  installLibimobiledevice.command  iosLogcat.py  jsonStats.py  playanimation.py  pull_vector_robot_audio.py  scan_port.py  setgammalut.py  updateDEPS.py  victor_chrome_tracing.py
victor-sdk-clad/: CMakeLists.txt  README.md  configure.py
webServerProcess/: BUILD.in  CMakeLists.txt
(+30709 files in other folders)
